:rocket: Build/Travis: test builds against PHP 7.3
Once PHP 7.3-beta came out, the `nightly` build on Travis became PHP 7.4-dev and builds haven't been tested against PHP 7.3 for months now.

As of this week, Travis has (finally) made a PHP 7.3 alias available now RC3 is out, so I've added a build to test against PHP 7.3/WP 5.0 so there won't be any unwelcome surprises when PHP 7.3 (or WP 5.0) comes out.

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,8 @@ jobs:
       env: WP_VERSION=latest
     - php: 7.0
       env: WP_VERSION=latest
+    - php: 7.3
+      env: WP_VERSION=5.0
     - php: 5.2
       # As 'trusty' is not supporting PHP 5.2/5.3 anymore, we need to force using 'precise'.
       dist: precise
@@ -221,7 +223,7 @@ script:
   fi
 # Validate the composer.json file.
 # @link https://getcomposer.org/doc/03-cli.md#validate
-- if [[ $TRAVIS_PHP_VERSION == "5.3" || $TRAVIS_PHP_VERSION == "7.2" ]]; then composer validate --no-check-all; fi
+- if [[ $TRAVIS_PHP_VERSION == "5.3" || $TRAVIS_PHP_VERSION == "7.3" ]]; then composer validate --no-check-all; fi
 
 after_script:
 - if [[ "$COVERAGE" == "1" ]]; then ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT; fi
